--- a/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
@@ -468,30 +468,29 @@ background-color: #ffffff;
       border-radius: 12px;
       padding: 9px;
       width: fit-content;
- 
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
+      width: 300px;
    
      }
   
   .input-fields label {
-      font-weight: 600;
+      font-weight: 400;
       margin-bottom: 6px;
       color: #333;
-      padding: 13px !important;
+      padding: 10px !important;
     }
     .input-fields{
       display: flex;
-      flex-wrap: wrap;
     }
     .field-content{
       display: flex;
       justify-content: center;
-      padding: 10px;
+      padding: 8px;
     }
     
     .payslipinput {
-      padding: 12px;
-      font-size: 15px;
+      padding: 10px;
+      font-size: 10px;
       border-radius: 6px;
       border: 1px solid #ccc;
       outline: none;
