--- a/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/AdminRegistration/Users.css
@@ -12,6 +12,8 @@
     border-radius: 15px;
     padding: 7px 20px 7px 20px;
     border: none;
+    display: flex;
+    gap: 5px;
     transition: transform 0.3s ease, color 0.3s ease;
 }
 
@@ -226,7 +228,7 @@
 
 .user-head-search {
     display: flex;
-    gap: 15px;
+    gap: 20px;
     justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
@@ -289,59 +291,73 @@
     font-size: 17px;
 }
 
+/* .bulkdelete-button {
+    padding: 15px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+} */
+
 .bulk-delete-btn {
-    background-color: rgb(232, 30, 30);
-    color: white;
-    padding: 10px 20px;
-    margin: 10px 0 10px 20px;
-    height: 50px;
-    width: auto;
-    border: none;
-    border-radius: 20px;
+    /* background-color: rgb(148, 4, 4); */
+    /* color: white; */
+    color: darkred;
+    padding: 7px 15px;
+    background-color: white;
+    /* margin: 10px 0 10px 20px; */
+    /* height: 50px; */
+    /* width: auto; */
+    border: 1px solid darkred;
+    border-radius: 10px;
     display: flex;
     align-items: center;
-    gap: 10px; /* spacing between icon and text */
-    font-size: 16px;
+    /* gap: 10px; */
+    /* font-size: 16px; */
     cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .bulk-delete-btn:hover {
-    background-color: rgb(200, 20, 20);
-  }
-  
-  .trash {
-    font-size: 20px;
+    transition: background-color 0.3s ease, transform 0.5s ease;
+    position: relative;
+    right: 10px;
+    background-color: rgb(120, 1, 1);
+    color: #fff;
+}
+
+.bulk-delete-btn:hover {
+    transform: scale(1.05);
+}
+
+.trash {
+    font-size: 25px;
     display: flex;
     align-items: center;
-  
-  }
-  
-  .delete-text {
+
+}
+
+.delete-text {
     display: flex;
     align-items: center;
-  }
-  .checkbox {
+}
+
+.checkbox {
     width: 18px;
     height: 18px;
     cursor: pointer;
-    accent-color: #007BFF; /* blue accent */
+    accent-color: #023d7b;
     transition: transform 0.2s ease;
-    margin: 0 auto; /* center in td */
+    margin: 0 auto;
     display: block;
-  }
-  
-  .checkbox:hover {
+}
+
+.checkbox:hover {
     transform: scale(1.1);
-  }
-  
+}
+
 
 @media only screen and (min-width:319px) and (max-width:500px) {
     .admin-header-user {
         flex-wrap: wrap;
         display: flex;
         flex-direction: row;
-        gap: 2px;
+        gap: 5px;
     }
 
     .admin-slidebar {
@@ -394,6 +410,7 @@
 
     .user-head-search {
         padding: 15px;
+        gap: 10px;
     }
 
     .userdata-container {
@@ -413,12 +430,14 @@
     }
 
     .users-btn .user-addicon {
-        font-size: 17px;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
     }
 
     .table-container {
         width: 90vw;
-    } 
+    }
 
     .users-table-container {
         position: relative;
@@ -428,7 +447,9 @@
 
     .users-btn {
         border-radius: 12px;
-        padding: 5px 10px 9px 10px;
+        /* padding: 5px 15px 9px 15px; */
+        padding: 5px 10px;
+        border: 1px solid #023265;
     }
 
     .delete-btn .userdelete-icon {
@@ -475,20 +496,23 @@
         border-color: #828181;
         outline: none;
     }
-    .delete-text
-    {
+
+    .delete-text {
         display: none;
     }
+
     .bulk-delete-btn {
-      
-        padding: 10px 20px;
-        margin: 10px 0 10px 10px;
-        height: 40px;
-        width: auto;
-        font-size: 10px;
-        margin-bottom: 3px;
-       
-      }
+        padding: 5px 10px;
+        right: 0;
+    }
+
+    .trash {
+        font-size: 20px;
+    }
+
+    .createbutton{
+        display: none;
+    }
 }
 
 @media only screen and (min-width:501px) and (max-width:768px) {
@@ -514,7 +538,8 @@
 
     .table-container {
         width: 90vw;
-    } 
+        height: 52vh;
+    }
 
     .users-table-container {
         position: relative;
@@ -621,20 +646,10 @@
         padding: 3px 7px;
         font-size: 15px;
     }
-    .delete-text
-    {
+
+    .delete-text {
         display: none;
     }
-    .bulk-delete-btn {
-      
-        padding: 10px 20px;
-        margin: 10px 0 10px 10px;
-        height: 40px;
-        width: auto;
-        font-size: 10px;
-        margin-bottom: 3px;
-       
-      }
 
 }
 
@@ -663,11 +678,13 @@
 
     .user-head-search {
         padding: 15px;
+        gap: 10px;
     }
 
     .users-btn {
         border-radius: 12px;
-        padding: 5px 13px 5px 13px;
+        /* padding: 5px 13px 5px 13px; */
+        padding: 5px 10px;
     }
 
     .users-total {
@@ -677,8 +694,8 @@
         left: 20px;
     }
 
-    .user-search-input-res {
-        width: 300px;
+    .user-search-input {
+        width: 250px;
         padding: 4px 0 4px 8px;
         border: 1px solid #b1b1b1;
         border-radius: 15px;
@@ -687,13 +704,19 @@
 
     .table-container {
         width: 80vw;
-    } 
+    }
 
     .users-table-container {
         position: relative;
         top: 15px;
         padding: 5px;
     }
+
+    .bulk-delete-btn {
+        padding: 5px 10px;
+        right: 5px;
+    }
+
 }
 
 @media only screen and (min-width:769px) and (max-width:1009px) {
@@ -717,9 +740,10 @@
         color: darkred;
         cursor: pointer;
     }
+
     .table-container {
         width: 85vw;
-    } 
+    }
 
     .users-table-container {
         position: relative;
